TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_after.dot
digraph AST {
  "2967186614320" [label="Start"];
  "2967186614320" -> "2967186674672";
  "2967186674672" [label="Code"];
  "2967186674672" -> "2967186674480";
  "2967186674480" [label="Function"];
  "2967186674480" -> "2967186674336";
  "2967186674480" -> "2967186674288";
  "2967186674480" -> "2967186674240";
  "2967186674480" -> "2967186674192";
  "2967186674480" -> "2967186674144";
  "2967186674480" -> "2967186674048";
  "2967186674336" [label="main"];
  "2967186674288" [label="("];
  "2967186674240" [label=")"];
  "2967186674192" [label="{"];
  "2967186674144" [label="Code"];
  "2967186674144" -> "2967186674000";
  "2967186674144" -> "2967186673904";
  "2967186674144" -> "2967186673760";
  "2967186674144" -> "2967186673712";
  "2967186674144" -> "2967186673616";
  "2967186674144" -> "2967186670976";
  "2967186674144" -> "2967186669728";
  "2967186674000" [label="Declaration"];
  "2967186674000" -> "2967186673856";
  "2967186674000" -> "2967186673808";
  "2967186673856" [label="x"];
  "2967186673808" [label="10"];
  "2967186673904" [label=";"];
  "2967186673760" [label="{"];
  "2967186673712" [label="Code"];
  "2967186673712" -> "2967186673568";
  "2967186673712" -> "2967186673472";
  "2967186673712" -> "2967186673328";
  "2967186673712" -> "2967186673184";
  "2967186673712" -> "2967186670496";
  "2967186673712" -> "2967186671696";
  "2967186673712" -> "2967186669872";
  "2967186673568" [label="Declaration"];
  "2967186673568" -> "2967186673424";
  "2967186673568" -> "2967186673376";
  "2967186673424" [label="y"];
  "2967186673376" [label="20"];
  "2967186673472" [label=";"];
  "2967186673328" [label="{"];
  "2967186673184" [label="Code"];
  "2967186673184" -> "2967186670448";
  "2967186673184" -> "2967186671936";
  "2967186670448" [label="Declaration"];
  "2967186670448" -> "2967186671360";
  "2967186670448" -> "2967186671600";
  "2967186671360" [label="z"];
  "2967186671600" [label="30"];
  "2967186671936" [label=";"];
  "2967186670496" [label="}"];
  "2967186671696" [label="Declaration"];
  "2967186671696" -> "2967186671024";
  "2967186671696" -> "2967186669968";
  "2967186671024" [label="z"];
  "2967186669968" [label="20"];
  "2967186669872" [label=";"];
  "2967186673616" [label="}"];
  "2967186670976" [label="Return"];
  "2967186669728" [label=";"];
  "2967186674048" [label="}"];
}
